NumberFormatException fix, decimal separator delphi eventlist

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/JavactiveX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jna-3.5.1.jar=lib/jna-3.5.1.jar
+file.reference.jna-3.5.1.jar=lib\\jna-3.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
